<resources>

    <string name="app_name">AndroidDemo</string>
    <string name="empty_str"></string>

    <string name="str_title_navigation_drawer_example">全面分析Android的ActionBar和ToolBar</string>
    <string name="str_title_intonation_line">音准线</string>
    <string name="str_title_xml_parse">解析XML</string>
    <string name="str_title_shimmer">SHIMMER</string>
    <string name="str_title_zh_cn_shimmer">字体发光</string>
    <string name="str_title_loop_view_pager">LOOP_BANNER</string>
    <string name="str_title_bottom_navigation">BOTTOM_NAVIGATION</string>
    <string name="str_title_search_view">SEARCH_VIEW</string>
    <string name="str_title_time_picker">时间选择组件</string>
    <string name="str_title_time_selector">类iOS滚轮时间选择器</string>
    <string name="str_title_copy_and_paste_textview">自由复制粘帖TextView</string>
    <string name="str_title_material_design_training">MATERIAL_DESIGN_TRAINING</string>
    <string name="str_title_radio_button">单选按钮</string>
    <string name="str_title_custom_drawable_textview">可设置TextView_Drawable尺寸</string>
    <string name="str_title_dialog">对话框</string>
    <string name="str_title_kotlin_dialog">Kotlin对话框</string>
    <string name="str_title_glow_edges_widget">边缘发光组件</string>
    <string name="str_class_native_widget">原生组件</string>
    <string name="str_class_radio_textview_widget">纯文本RadioButton</string>
    <!-- Android Material Design -->
    <string name="content_bottom_sheet">

        According to material design, Bottom Sheets can be of two types: Persistent and Modal. Here in this example we would make samples for both types of Android Bottom sheets. As per documentation persistent bottom sheets are supposed to be in-app content. Hence they are included right inside the main layout. In a way they are supposed to be integrated with the app or screen. On the other hand Modal Bottom sheets are a little different; they are supposed to be used as the layer on top of your app. Mostly they are inferred as an external entity, like a menu. Also since they are like menus, therefore if they are visible to the user, they do not allow the user to interact with main screen in background. First they need to dismiss the Android Bottom Sheet, only then the user would be allowed to interact with main activity. Lets learn more about them in

    </string>
    <string name="str_title_bottom_sheet">Widget_BottomSheet</string>
    <string name="str_title_button">Button</string>
    <string name="str_title_text_input_layout">TextInputLayout</string>
    <string name="title_activity_elec_business_arch">ElecBusinessArchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_activity_skip">跳过</string>

    <!-- custom widget -->
    <string name="logo_name_apache_1">Apache_scale_1</string>
    <string name="logo_name_apache_2">Apache_scale_1.5</string>
    <string name="logo_name_apache_3">Apache_scale_1.2</string>
    <string name="logo_name_bentley">Bentley</string>
    <string name="title_activity_navigation_drawer_example">NavigationDrawerExampleActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- button action -->
    <string name="btn_start">开始</string>
    <string name="btn_stop">结束</string>

    <!-- dialog -->
    <string name="dialog_type_alert_default">Default_Alert_Dialog</string>
    <string name="dialog_type_alert_list">Alert_Dialog_List</string>
    <string name="dialog_type_alert_list_radio">Alert_Dialog_Radio</string>
    <string name="dialog_type_alert_list_checkbox">Alert_Dialog_CheckBox</string>
    <string name="dialog_style_type">AlertDialogStyles</string>
    <string name="alert_dialog_title">DialogTitle</string>
    <string name="alert_dialog_content">DialogContent</string>
    <string name="alert_dialog_cancle">Cancel</string>
    <string name="alert_dialog_ensure">Ensure</string>
    <string name="custom_dialog_username">Username</string>
    <string name="custom_dialog_password">Password</string>

    <array name="fruit">
        <item>banana</item>
        <item>apple</item>
        <item>nuts</item>
        <item>orange</item>
    </array>

    <array name="theme">
        <!--<item>Animation_Dialog</item>-->
        <!--<item>DeviceDefault_ButtonBar_AlertDialog</item>-->
        <!--<item>DeviceDefault_Light_ButtonBar_AlertDialog</item>-->
        <!--<item>Holo_ButtonBar_AlertDialog</item>-->
        <!--<item>Holo_Light_ButtonBar_AlertDialog</item>-->
        <!--<item>ThemeOverlay_Material_Dialog</item>-->
        <!--<item>ThemeOverlay_Material_Dialog_Alert</item>-->
        <item>Theme_DeviceDefault_Dialog</item>
        <item>Theme_DeviceDefault_Dialog_Alert</item>
        <item>Theme_DeviceDefault_Light_Dialog</item>
        <item>Theme_DeviceDefault_Light_Dialog_Alert</item>
        <item>Theme_Holo_Dialog</item>
        <item>Theme_Holo_Light_Dialog</item>
        <item>Theme_Material_Dialog</item>
        <item>Theme_Material_Dialog_Alert</item>
        <item>Theme_Material_Light_Dialog</item>
        <item>Theme_Material_Light_Dialog_Alert</item>
    </array>

</resources>