<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robinlee.widget.dialog.DialogActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:id="@+id/mTextViewThemeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:textSize="@dimen/inactivie_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mBtnDefaultAlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:text="@string/dialog_type_alert_default" />

            <Button
                android:id="@+id/mBtnListAlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:padding="@dimen/normal_padding"
                android:text="@string/dialog_type_alert_list" />

            <Button
                android:id="@+id/mBtnRadioListAlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:padding="@dimen/normal_padding"
                android:text="@string/dialog_type_alert_list_radio" />

            <Button
                android:id="@+id/mBtnCheckboxListAlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:padding="@dimen/normal_padding"
                android:text="@string/dialog_type_alert_list_checkbox" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
